Fixed title spacing, Fixed 'No BP measure' key spacing, Fixed 'Cumulative registrations' empty state spacing

--- a/app/assets/stylesheets/partials/_reports.scss
+++ b/app/assets/stylesheets/partials/_reports.scss
@@ -28,6 +28,7 @@
 // Width
 .w-12px { width: 12px; }
 .w-32px { width: 32px; }
+.w-40px { width: 40px; }
 .w-48px { width: 48px; }
 .w-100pt { width: 100%; }
 .mw-100pt { max-width: 100%; }
@@ -36,6 +37,8 @@
 .h-10pt { height: 10%; }
 .h-100pt { height: 100%; }
 .h-200px { height: 200px; }
+// Spacing
+.mx-20px { margin-right: 20px; margin-left: 20px; }
 // Typography
 .fs-12px { font-size: 12px; }
 .fs-14px { font-size: 14px; }
